--- a/classwork/index.html
+++ b/classwork/index.html
@@ -25,12 +25,30 @@
             <li>Category</li>
         </ul>
     </div>
+
     <div class="er">
         <img src="images/post-landscape-1.jpg" alt="post-landscape-1" width="400" height="250">
-        <p class="er1">culture 5th july 22</p>
-        <h2 class="er1">11 Work From Home Part-Time Jobs You Can Do Now</h2>
-        <p class="er1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt deserunt commodi facilis quibusdam nihil,
-            ab velit id corporis tempora quia quo soluta labore vel quos fugiat vero, minima modi. Iusto!</p>
+    </div>
+    <p class="er1">culture 5th july 22</p>
+    <h2 class="er1">11 Work From Home Part-Time Jobs You Can Do Now</h2>
+    <p class="er1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt deserunt commodi facilis
+        quibusdam nihil,
+        ab velit id corporis tempora quia quo soluta labore vel quos fugiat vero, minima modi. Iusto!</p>
+    <div class="er3">
+        <img src="images/person-1.jpg" alt="person-1" class="er2">
+        <h3>cameroon williamson</h3>
+    </div>
+    <div class="er5">
+        <img src="images/post-landscape-2.jpg" alt="post-landscape-2" width="300" height="200" class="er6">
+        <p class="er4">sport 5th july 22</p>
+        <h2 class="er4">Let's Get Back to Work, New York</h2>
+        <img src="images/post-landscape-5.jpg" alt="post-landscape-5" width="300" height="200" class="er6">
+        <p class="er4">FOOD JULY 17TH 22</p>
+        <h2 class="er4">How to Avoid Distraction and Stay Focused During Video Calls?</h2>
+        <img src="images/post-landscape-7.jpg" alt="post-landscape-7" width="300" height="200" class="er6">
+        <p class="er4">design march 15th 22</p>
+        <h2 class="er4">Why Craigslist Tampa Is One of The Most Interesting Places On the Web?</h2>
+    </div>
     </div>
 </body>
 
