--- a/classwork/index.html
+++ b/classwork/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <div class="qw">
         <h1 class="hh">zenblog</h1>
         <ul style="list-style-type: none;" class="hh">
@@ -26,30 +27,79 @@
         </ul>
     </div>
 
-    <div class="er">
-        <img src="images/post-landscape-1.jpg" alt="post-landscape-1" width="400" height="250">
+    <div class="err">
+        <div class="err1">
+            <div class="er">
+                <img src="images/post-landscape-1.jpg" alt="post-landscape-1" width="400" height="250">
+            </div>
+            <p class="er1">culture 5th july 22</p>
+            <h2 class="er1">11 Work From Home Part-Time Jobs You Can Do Now</h2>
+            <p class="er1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt deserunt commodi facilis
+                quibusdam nihil,
+                ab velit id corporis tempora quia quo soluta labore vel quos fugiat vero, minima modi. Iusto!</p>
+            <div class="er3">
+                <img src="images/person-1.jpg" alt="person-1" class="er2">
+                <h3>cameroon williamson</h3>
+            </div>
+        </div>
+
+        <div class="er5">
+            <img src="images/post-landscape-2.jpg" alt="post-landscape-2" width="300" height="200" class="er6">
+            <p class="er4">sport 5th july 22</p>
+            <h2 class="er4">Let's Get Back to Work, New York</h2>
+            <img src="images/post-landscape-5.jpg" alt="post-landscape-5" width="300" height="200" class="er6">
+            <p class="er4">FOOD JULY 17TH 22</p>
+            <h2 class="er4">How to Avoid Distraction and Stay Focused During Video Calls?</h2>
+            <img src="images/post-landscape-7.jpg" alt="post-landscape-7" width="300" height="200" class="er6">
+            <p class="er4">design march 15th 22</p>
+            <h2 class="er4">Why Craigslist Tampa Is One of The Most Interesting Places On the Web?</h2>
+        </div>
+
+        <div class="er7">
+            <img src="images/post-landscape-3.jpg" alt="post-landscape-3" width="300" height="200" class="er8">
+            <p class="er9">business . 5th jul 22</p>
+            <h2 class="er9">6 Easy Steps To Create Your Own Cute Merch For Instagram</h2>
+            <img src="images/post-landscape-6.jpg" alt="post-landscape-6" width="300" height="200" class="er8">
+            <p class="er9">TECH MAR 1ST 22</p>
+            <h2 class="er9">10 Life-Changing Hacks Every Working Mom Should Know</h2>
+            <img src="images/post-landscape-8.jpg" alt="post-landscape-8" width="300" height="200" class="er8">
+            <p class="er9">TRAVEL • JUL 5TH '22</p>
+            <h2 class="er9">5 Great Startup Tips for Female Founders</h2>
+        </div>
+        <div class="er10">
+            <table border="1%" cellpadding="15%">
+                <tr>
+                    <td>
+                        <h3 class="er11">TRENDING</h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h2 class="er11">THE BEST HOMEMADE MASKS FOR FACE(keep the pimples away)</h2>
+                        <p class="er11">jane cooper</p>
+                    </td>
+                </tr>
+                <tr>
+                <td><h2 class="er11">17 pictures of new hair length that will inpire you for anew haircut</h2>
+                <p class="er11">wade warren</p></td>
+                </tr>
+                <tr>
+                <td><h2 class="er11">13 amazing poems from shel siverstein with valuable life lessons</h2>
+                <p class="er11">esther howard</p></td>
+                </tr>
+                <tr>
+                <td><h2 class="er11">9 half up/half down hairstyles for medium and short hair</h2>
+                <p class="er11">cameroon williamson</p></td>
+                </tr>
+                <tr>
+                <td><h2 class="er11">life insurance and pregnancy: A working moms guide</h2>
+                <p class="er11">jenny wilson</p></td>
+                </tr>
+            </table>
+        </div>
     </div>
-    <p class="er1">culture 5th july 22</p>
-    <h2 class="er1">11 Work From Home Part-Time Jobs You Can Do Now</h2>
-    <p class="er1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt deserunt commodi facilis
-        quibusdam nihil,
-        ab velit id corporis tempora quia quo soluta labore vel quos fugiat vero, minima modi. Iusto!</p>
-    <div class="er3">
-        <img src="images/person-1.jpg" alt="person-1" class="er2">
-        <h3>cameroon williamson</h3>
-    </div>
-    <div class="er5">
-        <img src="images/post-landscape-2.jpg" alt="post-landscape-2" width="300" height="200" class="er6">
-        <p class="er4">sport 5th july 22</p>
-        <h2 class="er4">Let's Get Back to Work, New York</h2>
-        <img src="images/post-landscape-5.jpg" alt="post-landscape-5" width="300" height="200" class="er6">
-        <p class="er4">FOOD JULY 17TH 22</p>
-        <h2 class="er4">How to Avoid Distraction and Stay Focused During Video Calls?</h2>
-        <img src="images/post-landscape-7.jpg" alt="post-landscape-7" width="300" height="200" class="er6">
-        <p class="er4">design march 15th 22</p>
-        <h2 class="er4">Why Craigslist Tampa Is One of The Most Interesting Places On the Web?</h2>
-    </div>
-    </div>
+
+
 </body>
 
 </html>
