--- a/classwork/index.html
+++ b/classwork/index.html
@@ -80,25 +80,118 @@
                     </td>
                 </tr>
                 <tr>
-                <td><h2 class="er11">17 pictures of new hair length that will inpire you for anew haircut</h2>
-                <p class="er11">wade warren</p></td>
+                    <td>
+                        <h2 class="er11">17 pictures of new hair length that will inpire you for anew haircut</h2>
+                        <p class="er11">wade warren</p>
+                    </td>
                 </tr>
                 <tr>
-                <td><h2 class="er11">13 amazing poems from shel siverstein with valuable life lessons</h2>
-                <p class="er11">esther howard</p></td>
+                    <td>
+                        <h2 class="er11">13 amazing poems from shel siverstein with valuable life lessons</h2>
+                        <p class="er11">esther howard</p>
+                    </td>
                 </tr>
                 <tr>
-                <td><h2 class="er11">9 half up/half down hairstyles for medium and short hair</h2>
-                <p class="er11">cameroon williamson</p></td>
+                    <td>
+                        <h2 class="er11">9 half up/half down hairstyles for medium and short hair</h2>
+                        <p class="er11">cameroon williamson</p>
+                    </td>
                 </tr>
                 <tr>
-                <td><h2 class="er11">life insurance and pregnancy: A working moms guide</h2>
-                <p class="er11">jenny wilson</p></td>
+                    <td>
+                        <h2 class="er11">life insurance and pregnancy: A working moms guide</h2>
+                        <p class="er11">jenny wilson</p>
+                    </td>
                 </tr>
             </table>
         </div>
     </div>
+    <h1 class="qrr1">Culture</h1>
+    <div class="wrr">
+        <div class="wrr1">
+            <div class="qrr2">
+                <div class="qrr3">
+                    <img src="images/post-landscape-6.jpg" alt="post-landscape-6" width="500" height="350" class="qr1">
+                </div>
+                <div class="qrr4">
+                    <p class="qr2">CULTURE • JUL 5TH '22</p>
+                    <h2 class="qr2">What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</h2>
+                    <p class="qr2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores placeat doloribus
+                        delectus
+                        alias
+                        consequatur
+                        minus libero ab minima porro ducimus. Hic impedit quis illum saepe eaque non, natus recusandae
+                        quo.
+                    </p>
+                    <div class="qr3">
+                        <img src="images/person-2.jpg" alt="person-2" class="qr4">
+                        <p>wade warren</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="qrr5">
+                <div class="qrr6">
+                    <img src="images/post-landscape-1.jpg" alt="post-landscape-1" height="120" width="200" class="qr5">
+                    <p class="qr6">CULTURE • JUL 5TH '22</p>
+                    <h2 class="qr6">11 work from home partime jobs you can do from home</h2>
+                    <p class="qr6">jenny wilson</p>
+                    <p class="qr6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis exercitationem
+                        est
+                        molestias sapiente animi officiis quaerat, explicabo temporibus porro recusandae tempore labore
+                        ad
+                        suscipit
+                        corrupti voluptatibus iusto. Quo, adipisci laboriosam.</p>
+                    <div class="qrr8">
+                        <p class="qr7">CULTURE • JUL 5TH '22</p>
+                        <h2 class="qr7">5 Great Startup Tips for Female Founders</h2>
+                        <p class="qr7">Jenny Wilson</p>
+                    </div>
+                </div>
+                <div class="qrr7">
+                    <img src="images/post-landscape-2.jpg" alt="post-landscape-2" width="700" height="400" class="qr8">
+                    <p class="qr9">CULTURE • JUL 5TH '22</p>
+                    <h2 class="qr9">How to Avoid Distraction and Stay Focused During Video Calls?</h2>
+                    <p class="qr9">Jenny Wilson</p>
+                    <p class="qr9">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero temporibus
+                        repudiandae,
+                        inventore pariatur
+                        numquam cumque possimus</p>
+                </div>
+            </div>
+        </div>
+        <div class="wrr2">
+            <div class="wr1">
+                <p>CULTURE • JUL 5TH '22</p>
+                <h2>How to Avoid Distraction and Stay Focused During Video Calls?</h2>
+                <p>jenny wilson</p>
+                <p>CULTURE • JUL 5TH '22</p>
+                <h2>17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</h2>
+                <p>Jenny Wilson</p>
+            </div>
+            <div class="wr2">
+                <p>CULTURE • JUL 5TH '22</p>
+                <h2>9 Half-up/half-down Hairstyles for Long and Medium Hair</h2>
+                <p>Jenny Wilson</p>
+            </div>
+            <div class="wr3">
+                <p>CULTURE • JUL 5TH '22</p>
+                <h2>Life Insurance And Pregnancy: A Working Mom’s Guide</h2>
+                <p>Jenny Wilson</p>
+            </div>
+            <div class="wr4">
+                <p>CULTURE • JUL 5TH '22</p>
+                <h2>The Best Homemade Masks for Face (keep the Pimples Away)</h2>
+                <p>jenny wilson</p>
+            </div>
+            <div class="wr5">
+                <p>CULTURE • JUL 5TH '22</p>
+                <h2>10 Life-Changing Hacks Every Working Mom Should Know</h2>
+                <p>jenny wilson</p>
+            </div>
+        </div>
+    </div>
+    </div>
 
 </body>
 
