--- a/classwork/index.html
+++ b/classwork/index.html
@@ -163,36 +163,207 @@
         <div class="wrr2">
             <div class="wr1">
                 <p>CULTURE • JUL 5TH '22</p>
-                <h2>How to Avoid Distraction and Stay Focused During Video Calls?</h2>
-                <p>jenny wilson</p>
-                <p>CULTURE • JUL 5TH '22</p>
-                <h2>17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</h2>
-                <p>Jenny Wilson</p>
+                <h3>How to Avoid Distraction and Stay Focused During Video Calls?</h2>
+                    <p>jenny wilson</p>
+                    <p>CULTURE • JUL 5TH '22</p>
+                    <h3>17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</h2>
+                        <p>Jenny Wilson</p>
             </div>
             <div class="wr2">
                 <p>CULTURE • JUL 5TH '22</p>
-                <h2>9 Half-up/half-down Hairstyles for Long and Medium Hair</h2>
-                <p>Jenny Wilson</p>
+                <h3>9 Half-up/half-down Hairstyles for Long and Medium Hair</h2>
+                    <p>Jenny Wilson</p>
             </div>
             <div class="wr3">
                 <p>CULTURE • JUL 5TH '22</p>
-                <h2>Life Insurance And Pregnancy: A Working Mom’s Guide</h2>
-                <p>Jenny Wilson</p>
+                <h3>Life Insurance And Pregnancy: A Working Mom’s Guide</h2>
+                    <p>Jenny Wilson</p>
             </div>
             <div class="wr4">
                 <p>CULTURE • JUL 5TH '22</p>
-                <h2>The Best Homemade Masks for Face (keep the Pimples Away)</h2>
-                <p>jenny wilson</p>
+                <h3>The Best Homemade Masks for Face (keep the Pimples Away)</h2>
+                    <p>jenny wilson</p>
             </div>
             <div class="wr5">
                 <p>CULTURE • JUL 5TH '22</p>
-                <h2>10 Life-Changing Hacks Every Working Mom Should Know</h2>
-                <p>jenny wilson</p>
+                <h3>10 Life-Changing Hacks Every Working Mom Should Know</h2>
+                    <p>jenny wilson</p>
             </div>
         </div>
     </div>
     </div>
+    <h1 class="drr">Business</h1>
+    <div class="drrr">
+        <div class="drr0">
+            <div class="drr1">
+                <div class="dr1">
+                    <p>BUSINESS • JUL 5TH '22</p>
+                    <h3>How to Avoid Distraction and Stay Focused During Video Calls?</h2>
+                        <p>Jenny Wilson</p>
+                </div>
+                <div class="dr2">
+                    <p>BUSINESS • JUL 5TH '22</p>
+                    <h3>17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</h2>
+                        <p>Jenny Wilson</p>
+                </div>
+                <div class="dr3">
+                    <p>BUSINESS • JUL 5TH '22</p>
+                    <h3>9 Half-up/half-down Hairstyles for Long and Medium Hair</h2>
+                        <p>Jenny Wilson</p>
+                </div>
+                <div class="dr4">
+                    <p>BUSINESS • JUL 5TH '22</p>
+                    <h3>Life Insurance And Pregnancy: A Working Mom’s Guide</h2>
+                        <p>Jenny Wilson</p>
+                </div>
+                <div class="dr5">
+                    <p>BUSINESS • JUL 5TH '22</p>
+                    <h3>The Best Homemade Masks for Face (keep the Pimples Away)</h2>
+                        <p>Jenny Wilson</p>
+                </div>
+                <div class="dr6">
+                    <p>BUSINESS • JUL 5TH '22</p>
+                    <h3>10 Life-Changing Hacks Every Working Mom Should Know</h2>
+                        <p>jenny wilson</p>
+                </div>
+            </div>
+            <div class="drr7">
+                <div class="drr2">
+                    <img src="images/post-landscape-3.jpg" alt="post-landscape-3" width="650" height="400" class="dr7">
+                    
+                    <div class="drrx">
+                        <div class="drr4">
+                            <img src="images/post-landscape-5.jpg" alt="post-landscape-5" width="300" height="200"
+                                class="dr9">
+                            <p>BUSINESS • JUL 5TH '22</p>
+                            <h3>11 Work From Home Part-Time Jobs You Can Do Now</h2>
+                                <p>Jenny Wilson</p>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero temporibus
+                                    repudiandae,
+                                    inventore
+                                    pariatur
+                                    numquam cumque possimus</p>
+                                <p>BUSINESS • JUL 5TH '22</p>
+                                <h3>5 Great Startup Tips for Female Founders</h2>
+                                    <p>Jenny Wilson</p>
+                        </div>
+                        <div class="drr5">
+                            <img src="images/post-landscape-7.jpg" alt="post-landscape-7" width="650" height="400"
+                                class="dr10">
+                            <p>BUSINESS • JUL 5TH '22</p>
+                            <h3>How to Avoid Distraction and Stay Focused During Video Calls?</h2>
+                                <p>Jenny Wilson</p>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero temporibus
+                                    repudiandae,
+                                    inventore
+                                    pariatur
+                                    numquam cumque possimus</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="drr3">
+                    <p>BUSINESS • JUL 5TH '22</p>
+                    <h3>What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem
+                            magni
+                            voluptates dolore. Tenetur fugiat voluptates quas, nobis error deserunt aliquam temporibus
+                            sapiente,
+                            laudantium dolorum itaque libero eos deleniti?</p>
+                        <div class="dr7">
+                            <img src="images/person-4.jpg" alt="person-4" class="dr8">
+                            <p>cameroon williamson</p>
+                        </div>
+                </div>
 
+            </div>
+        </div>
+
+    </div>
+    </div>
+    <h1 class="mmr">Lifestyle</h1>
+    <div class="mmm">
+        <div class="mm1">
+            <img src="images/post-landscape-8.jpg" alt="post-landscape-8" width="300" height="200">
+            <p>LIFESTYLE • JUL 5TH '22</p>
+            <h3>11 Work From Home Part-Time Jobs You Can Do Now</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias alias repellendus autem quis
+                    maiores
+                    maxime optio in eaque facilis officiis! Sint aliquid rerum ab fuga deleniti distinctio quia impedit
+                    quibusdam.</p>
+                <div class="dr7">
+                    <img src="images/person-7.jpg" alt="person-7" class="dr8">
+                    <p>Esther Howard</p>
+                </div>
+                <div class="mm2">
+                    <p>LIFESTYLE • JUL 5TH '22</p>
+                    <h3>The Best Homemade Masks for Face (keep the Pimples Away)</h2>
+                        <p>Jenny Wilson</p>
+                </div>
+                <p>LIFESTYLE • JUL 5TH '22</p>
+                <h3>10 Life-Changing Hacks Every Working Mom Should Know</h2>
+                    <p>Jenny Wilson</p>
+        </div>
+        <div class="mm3">
+            <img src="images/post-landscape-6.jpg" alt="post-landscape-6" width="300" height="200">
+            <p>LIFESTYLE • JUL 5TH '22</p>
+            <h3>Let’s Get Back to Work, New York</h2>
+                <img src="images/post-landscape-5.jpg" alt="post-landscape-5" width="300" height="200">
+                <p>LIFESTYLE • JUL 17TH '22</p>
+                <h3>How to Avoid Distraction and Stay Focused During Video Calls?</h2>
+                    <img src="images/post-landscape-4.jpg" alt="post-landscape-4" width="300" height="200">
+                    <p>LIFESTYLE • MAR 15TH '22</p>
+                    <h3>Why Craigslist Tampa Is One of The Most Interesting Places On the Web?</h2>
+        </div>
+        <div class="mm4">
+            <img src="images/post-landscape-3.jpg" alt="post-landscape-3" width="300" height="200">
+            <p>LIFESTYLE • JUL 5TH '22</p>
+            <h3>6 Easy Steps To Create Your Own Cute Merch For Instagram</h2>
+                <img src="images/post-landscape-2.jpg" alt="post-landscape-2" width="300" height="200">
+                <p>LIFESTYLE • MAR 1ST '22</p>
+                <h3>10 Life-Changing Hacks Every Working Mom Should Know</h2>
+                    <img src="images/post-landscape-1.jpg" alt="post-landscape-1" width="300" height="200">
+                    <p>LIFESTYLE • JUL 5TH '22</p>
+                    <h3>5 Great Startup Tips for Female Founders</h2>
+        </div>
+        <div class="mm5">
+            <div class="dr1">
+                <p>LIFESTYLE • JUL 5TH '22</p>
+                <h3>How to Avoid Distraction and Stay Focused During Video Calls?</h2>
+                    <p>Jenny Wilson</p>
+            </div>
+            <div class="dr2">
+                <p>LIFESTYLE • JUL 5TH '22</p>
+                <h3>17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</h2>
+                    <p>Jenny Wilson</p>
+            </div>
+            <div class="dr3">
+                <p>LIFESTYLE • JUL 5TH '22</p>
+                <h3>9 Half-up/half-down Hairstyles for Long and Medium Hair</h2>
+                    <p>Jenny Wilson</p>
+            </div>
+            <div class="dr4">
+                <p>LIFESTYLE • JUL 5TH '22</p>
+                <h3>Life Insurance And Pregnancy: A Working Mom’s Guide</h2>
+                    <p>Jenny Wilson</p>
+            </div>
+            <div class="dr5">
+                <p>LIFESTYLE • JUL 5TH '22</p>
+                <h3>The Best Homemade Masks for Face (keep the Pimples Away)</h2>
+                    <p>Jenny Wilson</p>
+            </div>
+            <div class="dr6">
+                <p>LIFESTYLE • JUL 5TH '22</p>
+                <h3>10 Life-Changing Hacks Every Working Mom Should Know</h2>
+                    <p>jenny wilson</p>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+    </div>
 </body>
 
 </html>
