--- a/classwork/index.html
+++ b/classwork/index.html
@@ -106,7 +106,13 @@
             </table>
         </div>
     </div>
-    <h1 class="qrr1">Culture</h1>
+    <div class="qqq">
+        <div class="qq">
+            <a href="see all cultures">See all cultures </a>
+        </div>
+        <h1 class="qrr1">Culture</h1>
+    </div>
+
     <div class="wrr">
         <div class="wrr1">
             <div class="qrr2">
@@ -192,6 +198,9 @@
         </div>
     </div>
     </div>
+    <div class="qq">
+        <a href="see all business">See all business </a>
+    </div>
     <h1 class="drr">Business</h1>
     <div class="drrr">
         <div class="drr0">
@@ -229,8 +238,29 @@
             </div>
             <div class="drr7">
                 <div class="drr2">
-                    <img src="images/post-landscape-3.jpg" alt="post-landscape-3" width="650" height="400" class="dr7">
-                    
+                    <div class="ss">
+                        <div class="sss">
+                            <img src="images/post-landscape-3.jpg" alt="post-landscape-3" width="650" height="400"
+                                class="dr7">
+                        </div>
+                        <div class="drr3">
+                            <p>BUSINESS • JUL 5TH '22</p>
+                            <h3>What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat
+                                    exercitationem
+                                    magni
+                                    voluptates dolore. Tenetur fugiat voluptates quas, nobis error deserunt aliquam
+                                    temporibus
+                                    sapiente,
+                                    laudantium dolorum itaque libero eos deleniti?</p>
+                                <div class="dr7">
+                                    <img src="images/person-4.jpg" alt="person-4" class="dr8">
+                                    <p>cameroon williamson</p>
+                                </div>
+                        </div>
+                    </div>
+
+
                     <div class="drrx">
                         <div class="drr4">
                             <img src="images/post-landscape-5.jpg" alt="post-landscape-5" width="300" height="200"
@@ -261,24 +291,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="drr3">
-                    <p>BUSINESS • JUL 5TH '22</p>
-                    <h3>What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem
-                            magni
-                            voluptates dolore. Tenetur fugiat voluptates quas, nobis error deserunt aliquam temporibus
-                            sapiente,
-                            laudantium dolorum itaque libero eos deleniti?</p>
-                        <div class="dr7">
-                            <img src="images/person-4.jpg" alt="person-4" class="dr8">
-                            <p>cameroon williamson</p>
-                        </div>
-                </div>
+
 
             </div>
         </div>
 
     </div>
+    </div>
+    <div class="qq">
+        <a href="see all lifestyle">See all lifestyle </a>
     </div>
     <h1 class="mmr">Lifestyle</h1>
     <div class="mmm">
@@ -359,11 +380,90 @@
 
         </div>
     </div>
+    <div class="aaa">
+        <div class="aa1">
+            <ul style="list-style-type: none;">
+                <li>about zenblog</li>
+                <li>Lorem ipsum dolor sit</li>
+                <li>amet consectetur</li>
+                <li>adipisicing elit.</li>
+                <li>Magnam ab,</li>
+                <li>perspiciatis beatae</li>
+                <li>autem deleniti</li>
+                <li>voluptate nulla a</li>
+                <li>dolores,</li>
+                <li>exercitationem eveniet</li>
+                <li>libero laudantium</li>
+                <li>recusandae officiis qui</li>
+                <li>aliquid blanditiis omnis</li>
+                <li>quae. Explicabo?</li>
+            </ul>
+        </div>
+        <div class="aa2">
+            <ul style="list-style-type: none;">
+                <li class="a1"><b>Navigation</b></li>
+                <li>Home</li>
+                <li>blog</li>
+                <li>categories</li>
+                <li>single post</li>
+                <li>about us</li>
+                <li>contact</li>
+            </ul>
+        </div>
+        <div class="aa3">
+            <ul style="list-style-type: none;">
+                <li class="a1"><b>Categories</b></li>
+                <li>business</li>
+                <li>culture</li>
+                <li>sport</li>
+                <li>food</li>
+                <li>politics</li>
+                <li>celebrity</li>
+                <li>start up</li>
+                <li>travel</li>
+            </ul>
+        </div>
+        <div class="aa6">
+            <div class="aa4">
+                <ul style="list-style-type: none;">
+                    <li><b>recent posts</b></li>
+                    <li><img src="images/post-sq-1.jpg" alt="post-sq-1" width="50px" height="50px"></li>
+                    <li><img src="images/post-sq-2.jpg" alt="post-sq-2" width="50px" height="50px"></li>
+                    <li><img src="images/post-sq-3.jpg" alt="post-sq-3" width="50px" height="50px"></li>
+                    <li><img src="images/post-sq-4.jpg" alt="post-sq-4" width="50px" height="50px"></li>
+                </ul>
+            </div>
+            <div class="aa5">
+                <ul style="list-style-type: none;">
+                    <li><a href="index.html">culture • jul 5th 22</a></li>
+                    <li><a href="index.html">5 great startup ideas for female founders</a></li>
+                    <li><a href="index.html">culture • jul 5th 22</a></li>
+                    <li><a href="index.html">what is the son of football coach john gruden,deuce gruden doing now</a>
+                    </li>
+                    <li><a href="index.html">culture • jul 5th 22</a></li>
+                    <li><a href="index.html">life insurance and pregnancy a working moms guide</a></li>
+                    <li><a href="index.html">culture • jul 5th 22</a></li>
+                    <li><a href="index.html">how to avoid distraction during videocallas</a></li>
 
-
-
-
+                </ul>
+            </div>
+        </div>
     </div>
+    <div class="nnn">
+        <div class="nn1">
+            <p>© Copyright ZenBlog. All Rights Reserved</p>
+            <p> Designed by ZiaTechz</p>
+        </div>
+        <div class="nn2">
+            <img src="images/twitter_665228.png" alt="twitter" width="30" height="30">
+            <img src="images/instagram_1384015.png" alt="instagram" width="30" height="30">
+            <img src="images/facebook_665209.png" alt="facebook" width="30" height="30">
+            <img src="images/linkedin.png" alt="linkedin" width="30" height="30">
+            <img src="images/skype.png" alt="skype" width="30" height="30">
+        </div>
+    </div>
+
+
 </body>
 
 </html>
