--- a/the odin project/index.html
+++ b/the odin project/index.html
@@ -13,15 +13,16 @@
 
 <body>
     <div class="hhh">
-
-        <div class="container" style="height: 30px;">
+        <img src="images/odin.png" alt="" height="60px" width="100px" class="logo">
+        <div class="container-fluid w-100" style="height: 40px;">
 
             <div class="row">
 
                 <div class="col-4">
                     <div class="hh1">
-                    <img src="images/odin.png" alt="" height="60px" width="100px" class="logo">
-                    <b><h5>The Odin Project</h5></b>
+                        <b>
+                            <h5>The Odin Project</h5>
+                        </b>
                     </div>
                 </div>
 
@@ -59,7 +60,17 @@
 
         </div>
 
+
     </div>
+<div class="hhh1">
+    <b><h1 class="hh3"><span style="color: black;">Your</span><span style="color:rgb(176, 131, 17)"> Career in Web
+            Development</span></h1></b>
+    <b><h1 class="hh4">Starts Here</h1></b>
+    <p class="hh5">Our full stack curriculum is free and supported by a </p>
+    <p class="hh6">passionate open source community.</p>
+</div>
+<p class="hh7">View Full Curriculum</p>
+<img src="images/background.svg" alt="">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
