--- a/the odin project/form.html
+++ b/the odin project/form.html
@@ -60,17 +60,36 @@
 
         </div>
 
-
     </div>
-<div class="hhh1">
-    <b><h1 class="hh3"><span style="color: black;">Your</span><span style="color:rgb(176, 131, 17)"> Career in Web
-            Development</span></h1></b>
-    <b><h1 class="hh4">Starts Here</h1></b>
-    <p class="hh5">Our full stack curriculum is free and supported by a </p>
-    <p class="hh6">passionate open source community.</p>
-</div>
-<p class="hh7">View Full Curriculum</p>
-<img src="images/background.svg" alt="">
+    <div class="bb">
+    <div class="qqq">
+        <div class="qq1">
+            <h1>Sign up for free</h1>
+            or<a href=""> sign in to your existing account</a>
+        </div>
+        <div class="qq2">
+            <form>
+                <div class="mb-3">
+                    <label for="Username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="Username">
+                </div>
+                <div class="mb-3">
+                    <label for="InputEmail" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="Password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="Password">
+                </div>
+                <div class="mb-3">
+                    <label for="Password" class="form-label">Password Confirmation</label>
+                    <input type="password" class="form-control" id="Password Confirmation">
+                </div>
+            </form>
+
+        </div>
+    </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
