--- a/the odin project/index.html
+++ b/the odin project/index.html
@@ -9,6 +9,9 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Geo&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,29 +24,29 @@
                 <div class="col-4">
                     <div class="hh1">
                         <b>
-                            <h5>The Odin Project</h5>
+                            <h3>THE ODIN PROJECT</h3>
                         </b>
                     </div>
                 </div>
 
                 <div class="col-1 text-secondary">
-                    All Paths
+                    <a href="">All Paths</a>
                 </div>
 
                 <div class="col-1 text-secondary">
-                    About
+                    <a href="">About</a>
                 </div>
 
                 <div class="col-1 text-secondary">
-                    Community
+                    <a href="">Community</a>
                 </div>
 
                 <div class="col-1 text-secondary">
-                    Support us
+                    <a href="">Support us</a>
                 </div>
 
                 <div class="col-1 text-secondary">
-                    Sign in
+                    <a href="">Sign in</a>
                 </div>
 
                 <div class="col-1 text-secondary">
@@ -69,7 +72,7 @@
     <p class="hh5">Our full stack curriculum is free and supported by a </p>
     <p class="hh6">passionate open source community.</p>
 </div>
-<p class="hh7">View Full Curriculum</p>
+<p class="hh7">  View Full Curriculum</p>
 <img src="images/background.svg" alt="">
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
