--- a/the odin project/form.html
+++ b/the odin project/form.html
@@ -9,6 +9,9 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geo&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +24,7 @@
                 <div class="col-4">
                     <div class="hh1">
                         <b>
-                            <h5>The Odin Project</h5>
+                            <h3>THE ODIN PROJECT</h3>
                         </b>
                     </div>
                 </div>
@@ -62,33 +65,50 @@
 
     </div>
     <div class="bb">
-    <div class="qqq">
-        <div class="qq1">
-            <h1>Sign up for free</h1>
-            or<a href=""> sign in to your existing account</a>
-        </div>
-        <div class="qq2">
-            <form>
-                <div class="mb-3">
-                    <label for="Username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="Username">
-                </div>
-                <div class="mb-3">
-                    <label for="InputEmail" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-3">
-                    <label for="Password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="Password">
-                </div>
-                <div class="mb-3">
-                    <label for="Password" class="form-label">Password Confirmation</label>
-                    <input type="password" class="form-control" id="Password Confirmation">
-                </div>
-            </form>
+        <div class="qqq">
+            <div class="qq1">
+                <h1>Sign up for free</h1>
+                or<a href=""> sign in to your existing account</a>
+            </div>
+            <div class="qq2">
+                <form>
+                    <div class="mb-3">
+                        <label for="Username" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="Username">
+                    </div>
+                    <div class="mb-3">
+                        <label for="InputEmail" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="Password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="Password">
+                    </div>
+                    <div class="mb-3">
+                        <label for="Password" class="form-label">Password Confirmation</label>
+                        <input type="password" class="form-control" id="Password Confirmation">
+                    </div>
+                    <div class="mb-3">
+                        <a href="">By signing up, you agree to our terms of use.</a>
+                    </div>
+                    <button type="Sign up" class="btn w-100 btn-success">Sign Up</button>
+                    <div class="relative">
+                        <div class="absolute inset-0 flex items-center">
+                          <div class="w-full border-t border-gray-300"></div>
+                        </div>
+                        <div class="relative flex justify-center text-sm">
+                          <p class="bg-white dark:bg-gray-800 px-2 text-gray-500 dark:text-gray-400">Or continue with</p>
+                        </div>
+                      </div>
+                   
 
+
+
+                </form>
+
+
+            </div>
         </div>
-    </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
