--- a/the odin project/form.html
+++ b/the odin project/form.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="hhh">
-        <img src="images/odin.png" alt="" height="60px" width="100px" class="logo">
-        <div class="container-fluid w-100" style="height: 40px;">
+    <div class="hhh d-flex fs-6 text-secondary">
+        <img src="images/odin.png" alt="" height="50px" width="90px" class="mt-1 logo">
+        <div class="container-fluid w-60 mt-3" style="height: 20px;">
 
             <div class="row">
 
                 <div class="col-4">
-                    <div class="hh1">
+                    <div class="hh1 fs-6 fw-normal text-dark">
                         <b>
                             <h3>THE ODIN PROJECT</h3>
                         </b>
@@ -54,8 +54,8 @@
                 </div>
 
                 <div class="col-2">
-                    <div class="hh2">
-                        <a href="form.html">GET STARTED</a>
+                    <div class="hh2 border border-success bg-success rounded-3 " style="width:120px">
+                        <a class="text-light text-decoration-none"href="form.html">GET STARTED</a>
                     </div>
                 </div>
 
@@ -92,17 +92,11 @@
                         <a href="">By signing up, you agree to our terms of use.</a>
                     </div>
                     <button type="Sign up" class="btn w-100 btn-success">Sign Up</button>
-                    <div class="relative">
-                        <div class="absolute inset-0 flex items-center">
-                          <div class="w-full border-t border-gray-300"></div>
-                        </div>
-                        <div class="relative flex justify-center text-sm">
-                          <p class="bg-white dark:bg-gray-800 px-2 text-gray-500 dark:text-gray-400">Or continue with</p>
-                        </div>
-                      </div>
-                   
 
+                    <div class="cc">
 
+                    </div>
+                
 
                 </form>
 
