--- a/the odin project/index.html
+++ b/the odin project/index.html
@@ -10,52 +10,52 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Geo&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="hhh">
-        <img src="images/odin.png" alt="" height="60px" width="100px" class="logo">
-        <div class="container-fluid w-100" style="height: 40px;">
+    <div class="hhh d-flex fs-6 text-secondary">
+        <img src="images/odin.png" alt="" height="50px" width="90px" class=" logo mt-1">
+        <div class="container-fluid w-60 mt-3 " style="height: 20px;">
 
             <div class="row">
 
                 <div class="col-4">
-                    <div class="hh1">
+                    <div class="hh1 fs-6 fw-normal text-dark">
                         <b>
                             <h3>THE ODIN PROJECT</h3>
                         </b>
                     </div>
                 </div>
 
-                <div class="col-1 text-secondary">
-                    <a href="">All Paths</a>
+                <div class="col-1">
+                    <a class="text-secondary text-decoration-none" href="">All Paths</a>
                 </div>
 
-                <div class="col-1 text-secondary">
-                    <a href="">About</a>
+                <div class="col-1">
+                    <a class="text-secondary text-decoration-none" href="">About</a>
                 </div>
 
-                <div class="col-1 text-secondary">
-                    <a href="">Community</a>
+                <div class="col-1">
+                    <a class="text-secondary text-decoration-none" href="">Community</a>
                 </div>
 
-                <div class="col-1 text-secondary">
-                    <a href="">Support us</a>
+                <div class="col-1">
+                    <a class="text-secondary text-decoration-none" href="">Support us</a>
                 </div>
 
-                <div class="col-1 text-secondary">
-                    <a href="">Sign in</a>
+                <div class="col-1 ">
+                    <a class="text-secondary text-decoration-none" href="">Sign in</a>
                 </div>
 
-                <div class="col-1 text-secondary">
+                <div class="col-1 ">
                     <i class="bi bi-brightness-high"></i>
                 </div>
 
                 <div class="col-2">
-                    <div class="hh2">
-                        <a href="form.html">GET STARTED</a>
+                    <div class="hh2 border border-success bg-success rounded-3" style="width:120px">
+                        <a class="text-light text-decoration-none" href="form.html">GET STARTED</a>
                     </div>
                 </div>
 
@@ -65,15 +65,26 @@
 
 
     </div>
-<div class="hhh1">
+<div class="hhh1 text-center">
+    <div class="ss1 lh-1">
     <b><h1 class="hh3"><span style="color: black;">Your</span><span style="color:rgb(176, 131, 17)"> Career in Web
             Development</span></h1></b>
     <b><h1 class="hh4">Starts Here</h1></b>
-    <p class="hh5">Our full stack curriculum is free and supported by a </p>
-    <p class="hh6">passionate open source community.</p>
+    </div>
+    <div class="ss2">
+    <p class="hh5 fs-5 mt-3 text-secondary">Our full stack curriculum is free and supported by a </p>
+    <p class="hh6 fs-5 text-secondary">passionate open source community.</p>
+    </div>
 </div>
-<p class="hh7">  View Full Curriculum</p>
+<p class="hh7 mt-5 p-1 border border-secondary rounded-3 text-center " style="width:210px">  View Full Curriculum</p>
 <img src="images/background.svg" alt="">
+
+<div class="text-center max-w-3xl mx-auto ">
+    <h2 class="text-3xl text-gray-800 dark:text-gray-200 font-medium mt-5 mb-3">How it works</h2>
+    <p class="text-sm-middle">This is the website we wish we had when we were learning on our own. We scour the internet looking for only the best resources to supplement your learning and present them in a logical order.</p>
+  </div>
+  
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
