--- a/the odin project/index.html
+++ b/the odin project/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <div class="hhh d-flex fs-6 text-secondary">
+    <div class="hhh d-flex fs-4 text-secondary">
         <img src="images/odin.png" alt="" height="50px" width="90px" class=" logo mt-1">
-        <div class="container-fluid w-60 mt-3 " style="height: 20px;">
+        <div class="container-fluid w-100 mt-3 " style="height: 30px;">
 
             <div class="row">
 
@@ -54,8 +54,8 @@
                 </div>
 
                 <div class="col-2">
-                    <div class="hh2 border border-success bg-success rounded-3" style="width:120px">
-                        <a class="text-light text-decoration-none" href="form.html">GET STARTED</a>
+                    <div class="hh2 border border-4 border-success bg-success rounded-2" style="width:155px">
+                        <a class="text-light text-decoration-none text-center" href="form.html">GET STARTED</a>
                     </div>
                 </div>
 
@@ -65,25 +65,101 @@
 
 
     </div>
-<div class="hhh1 text-center">
-    <div class="ss1 lh-1">
-    <b><h1 class="hh3"><span style="color: black;">Your</span><span style="color:rgb(176, 131, 17)"> Career in Web
-            Development</span></h1></b>
-    <b><h1 class="hh4">Starts Here</h1></b>
+    <div class="hhh1 text-center">
+        <div class="ss1 lh-1">
+            <b>
+                <h1 class="hh3"><span style="color: black;">Your</span><span style="color:rgb(176, 131, 17)"> Career in
+                        Web
+                        Development</span></h1>
+            </b>
+            <b>
+                <h1 class="hh4">Starts Here</h1>
+            </b>
+        </div>
+        <div class="ss2">
+            <p class="hh5 fs-2 mt-3 text-secondary">Our full stack curriculum is free and supported by a </p>
+            <p class="hh6 fs-2 text-secondary">passionate open source community.</p>
+        </div>
     </div>
-    <div class="ss2">
-    <p class="hh5 fs-5 mt-3 text-secondary">Our full stack curriculum is free and supported by a </p>
-    <p class="hh6 fs-5 text-secondary">passionate open source community.</p>
-    </div>
-</div>
-<p class="hh7 mt-5 p-1 border border-secondary rounded-3 text-center " style="width:210px">  View Full Curriculum</p>
-<img src="images/background.svg" alt="">
+    <p class="hh7 mt-5 p-2 border border-secondary rounded-3 text-center " style="width:220px"> View Full Curriculum</p>
+    <img src="images/background.svg" alt="">
 
-<div class="text-center max-w-3xl mx-auto ">
-    <h2 class="text-3xl text-gray-800 dark:text-gray-200 font-medium mt-5 mb-3">How it works</h2>
-    <p class="text-sm-middle">This is the website we wish we had when we were learning on our own. We scour the internet looking for only the best resources to supplement your learning and present them in a logical order.</p>
-  </div>
-  
+    <div class="vv text-center max-w-3xl mx-auto ">
+        <h2 class="text-3xl text-gray-800 dark:text-gray-200 font-medium mt-5 mb-3">How it works</h2>
+        <p>This is the website we wish we had when we were learning on our own. We scour the</p>
+        <p>internet looking for only the best resources to supplement your learning and present them</p>
+        <p>in a logical order.</p>
+    </div>
+    <div class=" iii d-flex flex-col align-center text-center">
+        <div class="ii1 p-5 flex-1">
+            <img class="max-w-3xl h-20 inline" src="images/img1.svg" alt="" width="200px" height="200px">
+            <h3 class=" mt-3 mb-4">Learn</h3>
+            <p>Learn from a curriculum with the best curated online tutorials, blogs, and courses.</p>
+        </div>
+        <div class="ii2 p-5 flex-1">
+            <img class="max-w-3xl h-20 inline" src="images/img2.svg" alt="" width="200px" height="200px">
+            <h3 class=" mt-3 mb-4">Build</h3>
+            <p>Build dozens of portfolio-worthy projects along the way, from simple scripts to full programs and
+                deployed websites.</p>
+        </div>
+        <div class="ii3 p-5 flex-1">
+            <img class="h-20 inline" src="images/img3.svg" alt="" width="200px" height="200px">
+            <h3 class="mb-4">Connect</h3>
+            <p>You're not alone. Learn and get help from our friendly community of beginner and experienced developers.
+            </p>
+        </div>
+    </div>
+    <div class="border" style="border-color:#e1e3e3; background-color:#e1e3e3;">
+        <h2 class="text-center mt-5">Learn everything you need to know</h2>
+
+
+        <div class="container text-center mt-5">
+            <div class="row">
+                <div class="col text-secondary mb-3 border-light bg-light rounded-3">
+                    <img src="images/badge1.svg" alt="" width="200" height="200">
+                    <h2 class="text-center ">Intermediate HTML and CSS</h2>
+                </div>
+                <div class="col text-secondary mb-3 border border-light bg-light rounded-3">
+                    <img src="images/badge2.svg" alt="" width="200" height="200">
+                    <h2 class="text-center">Advanced HTML and CSS</h2>
+                </div>
+                <div class="col text-secondary mb-3 border border-light bg-light rounded-3">
+                    <img src="images/badge3.svg" alt="" width="200" height="200">
+                    <h2 class="text-center">Databases</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-secondary mb-3 border border-light bg-light rounded-3">
+                    <img src="images/badge4.svg" alt="" width="200" height="200">
+                    <h2 class="text-center">Javascript</h2>
+                </div>
+                <div class="col text-secondary mb-3 border border-light bg-light rounded-3">
+                    <img src="images/badge5.svg" alt="" width="200" height="200">
+                    <h2 class="text-center">React</h2>
+                </div>
+                <div class="col text-secondary mb-3 border border-light bg-light rounded-3">
+                    <img src="images/badge6.svg" alt="" width="200" height="200">
+                    <h2 class="text-center">NodeJS</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-secondary mb-3 border border-light bg-light rounded-3">
+                    <img src="images/badge7.svg" alt="" width="200" height="200">
+                    <h2 class="text-center">Ruby on Rails</h2>
+                </div>
+                <div class="col text-secondary mb-3 border border-light bg-light rounded-3">
+                    <img src="images/badge8.svg" alt="" width="200" height="200">
+                    <h2 class="text-center">Ruby</h2>
+                </div>
+                <div class="col text-secondary mb-3 border border-light bg-light rounded-3">
+                    <img src="images/badge9.svg" alt="" width="200" height="200">
+                    <h2 class="text-center">Getting hired</h2>
+                </div>
+            </div>
+        </div>
+        <p class="hh7 ii4 mt-5 mb-4 p-3 border border-light bg-light rounded-3 " style="width:220px"> Explore Curriculum</p>
+    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
