--- a/book my show/index.html
+++ b/book my show/index.html
@@ -1,14 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="main">
+    <div class="aa">
+        <div class="logo">
+            <img src="images/bookmyshow-logo-vector.png" alt="bookmyshow-logo-vector" width="140px" height="70px">
+        </div>
+        <div class="search">
+            <nav class="navbar">
+                <form class="container-fluid">
+                    <div class="input-group">
+                        <span class="input-group-search"><i class="bi bi-search"></i></span>
+                        <input type="search" class="form-control"
+                            placeholder="Search for Movies, Events, Plays, Sports and Activities"
+                            aria-label="Search for Movies, Events, Plays, Sports and Activities"
+                            aria-describedby="basic-addon1">
+                    </div>
+                </form>
+            </nav>
+        </div>
+        <div class="drop">
+            <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Kochi
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="#">kollam</a></li>
+                    <li><a class="dropdown-item" href="#">trissur</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="sign">
+            <a href="">Sign in</a>
+        </div>
+        <div class="ic">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+              </svg>
+        </div>
+    </div>
+    <div class="list1">
+    <div class="bb">
+        <ul style="list-style-type: none;">
+            <li><a href="">Movies</a></li>
+            <li><a href="">Stream</a></li>
+            <li><a href="">Events</a></li>
+            <li><a href="">Plays</a></li>
+            <li><a href="">Sports</a></li>
+            <li><a href="">Activities</a></li>
+        </ul>
+    </div>
+<div class="bb1">
+    <ul style="list-style-type: none;">
+        <li><a href="">List your show</a></li>
+        <li><a href="">Corporates</a></li>
+        <li><a href="">Offers</a></li>
+        <li><a href="">Gift cards</a></li>
+    </ul>
+</div>
+</div>
 
 
-    
+
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
