--- a/book my show/index.html
+++ b/book my show/index.html
@@ -79,33 +79,76 @@
     <div class="slide">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="images/slide1.avif" class="d-block w-100" alt="slide1">
-              </div>
-              <div class="carousel-item">
-                <img src="images/slide2.avif" class="d-block w-100" alt="slide2">
-              </div>
-              <div class="carousel-item">
-                <img src="images/slide3.avif" class="d-block w-100" alt="slide3">
-              </div>
+                <div class="carousel-item active">
+                    <img src="images/slide1.avif" class="d-block w-100" alt="slide1" height="400px">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slide2.avif" class="d-block w-100" alt="slide2" height="400px">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slide3.avif" class="d-block w-100" alt="slide3" height="400px">
+                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
-    
-    </div>
+        </div>
 
+    </div>
+    <div class="main1">
+        <h1>Recommended Movies</h1>
+        <div class="mov">
+            <div class="mov1">
+                <a href=""><img class="movie" src="images/mov1.avif" alt="mov1" height="460px"></a>
+                <a href=""><h4>A.R.M</h1></a>
+                <a href=""><p>Action/Adventure/Drama/Period</p></a>
+            </div>
+            <div class="mov2">
+                <a href=""><img class="movie" src="images/mov2.avif" alt="mov2" height="460px"></a>
+                <a href=""><h4>Kishkindha Kaandam</h1></a>
+                <a href=""><p>Mystery/Thriller</p></a>
+            </div>
+            <div class="mov3">
+                <a href=""><img class="movie" src="images/mov3.avif" alt="mov3" height="460px"></a>
+                <a href=""><h4>Joker: Folie a Deux</h1></a>
+                <a href=""><p>Drama/Suspense/Thriller</p></a>
+            </div>
+            <div class="mov4">
+                <a href=""><img class="movie" src="images/mov4.avif" alt="mov4" height="460px"></a>
+                <a href=""><h4>Kondal</h1></a>
+                <a href=""><p>ction/Crime/Drama</p>A</a>
+            </div>
+            <div class="mov5">
+                <a href=""><img class="movie" src="images/mov5.avif" alt="mov5" height="460px"></a>
+                <a href=""><h4>Bad Boyz</h1></a>
+                <a href=""><p>Action/Comedy</p></a>
+            </div>
+            <div class="mov5">
+                <a href=""><img class="movie" src="images/mov-6.avif" alt="mov6" height="460px"></a>
+                <a href=""><h4>Tumbbad</h1></a>
+                <a href=""><p>Fantasy/Horror/Period</p></a>
+            </div>
+        </div>
+
+    </div>
+    <div class="main3">
+        <img src="images/img1.avif" alt="img1">
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
